--- a/styles/animations.css
+++ b/styles/animations.css
@@ -12,3 +12,98 @@
 
 Кроме этого, не меняйте HTML переключателя тем. Его разметка также гарантирует работу своего скрипта.
 */
+@keyframes pointer {
+    from {
+      left: 0;
+    }
+  
+    to {
+      left: 4px;
+    }
+  }
+  
+  @keyframes underline {
+     from{
+      transform: scaleX(0);
+    }
+  
+    to {
+      transform: scaleX(1);
+    }
+  }
+
+  @keyframes color {
+    from{
+     transform: scaleX(0);
+   }
+ 
+   to {
+     transform: scaleX(1);
+   }
+ }
+ .like-icon .sparks {
+  opacity: 0;
+ }
+ .like-icon .contour {
+  fill: var(--accent-color);
+  transition: fill 0.1s linear;
+ }
+ .like-icon .main-body {
+  fill: transparent;
+  transition: fill 0.3s linear;
+} 
+
+.like-icon .core {
+  fill: transparent;
+  transition: fill 0.3s linear;
+  transition-delay: 0.03s;
+} 
+.like-icon:hover .core {
+  fill: var(--accent-color);
+  transition: fill 0.3s linear;
+}
+
+.like-icon:hover .main-body {
+  fill: var(--accent-color);
+  transition: fill 0.3s 0.05s linear;
+}
+.like-icon:active .core {
+  fill: var(--sparks-color);
+  transition: fill  0.3s linear;
+}
+.like-icon:active .main-body {
+  fill: var(--sparks-color);
+  transition: fill 0.3s 0.05s linear;
+}
+.like-icon.is-liked .contour {
+  fill: var(--sparks-color);
+  transition: fill 0.3s 0.06s linear;
+}
+.like-icon.is-liked {
+  animation: scale 0.3s 0.1s ease-in 1 alternate;
+}
+.like-icon.is-liked .core {
+  fill: var(--sparks-color);
+}
+.like-icon.is-liked .main-body {
+  fill: var(--sparks-color);
+  transition: fill 0.3s 0.05s linear;
+}
+
+.like-icon.is-liked .heart {
+  transform-origin: center;
+  animation: scale 0.3s ease-in 0.1s 1 alternate;
+}
+
+.like-icon.is-liked .sparks {
+  animation: opacity 0.3s ease-in 0.3s 1 alternate-reverse;
+}
+@keyframes opacity {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
