--- a/styles/style.css
+++ b/styles/style.css
@@ -17,4 +17,443 @@
 .page {
   min-inline-size: 320px;
   min-block-size: 100dvb;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--bg-color);
+  color: var(--accent-color);
+  background-image: var(--bg-image);
+  background-size: cover;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-position: center;
+  font-family: var(--font-family), sans-serif;
+  font-variation-settings: 'wght' var(--font-weight-text);
+  font-size: 18px;
+
 }
+.header {
+  border: 2px solid var(--accent-color);
+  background-color: var(--bg-color);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: clamp(23.4375rem, 16.2852rem + 30.5164vw, 43.75rem);
+  padding-top: clamp(7.5rem, 7.1479rem + 1.5023vw, 8.5rem);
+  /* padding-bottom: 25px; */
+  font-family: var(--accent-font);
+  margin: 100px auto;
+  /* font-size: 65px; */
+  /* font-family: var(--accent-font); */
+}
+.logo {
+  font-size: clamp(3.0625rem, 2.7104rem + 1.5023vw, 4.0625rem);
+  font-weight: var(--font-weight-text);
+  
+}
+.header__title {
+   margin-top: 20px;
+  margin-bottom: 25px;
+  font-size: clamp(0.875rem, 0.6769rem + 0.8451vw, 1.4375rem);
+  text-transform: uppercase;
+} 
+
+.header__theme-menu {
+  display: flex;
+}
+
+.theme-menu__button {
+  border: none;
+   display: inline-block;
+  background-color: transparent;
+  font-size: 14px;
+  text-decoration: none;
+  text-transform: uppercase;
+  /* animation:  underline 0.6s ease; */
+  transition:  0.3s ease; 
+}
+.theme-menu__button::after {
+  content: "";
+  position: absolute;
+  display: block;
+  background-color: var(--accent-color);
+  inline-size: 53%; 
+  block-size: 2px;
+ margin-block-start: 2px; 
+  margin-top: 2px;
+ transform-origin: left;
+ transform: scale(0);
+}
+.theme-menu__button:focus-visible::after {
+   animation: underline 0.5s ease-in-out;
+  transform: scale(1);
+}
+.theme-menu__button:disabled {
+  pointer-events: none;
+  opacity: 0.6;
+}
+.theme-menu__button:disabled:hover {
+  pointer-events: none;
+}
+
+.theme-menu__button:focus {
+  outline: none;
+  opacity: 0.6;
+}
+
+.theme-menu__button:focus-visible {
+  opacity: 0.6;
+  outline: none;
+}
+
+.theme-menu__button:hover {
+  cursor: pointer;
+  opacity: 0.6;
+}
+
+.theme-menu__button:disabled::before {
+  content: '▶';
+  position: absolute;
+  width: 14px;
+  height: 14px;
+  animation-name: pointer;
+  animation: pointer 0.5s infinite ease-in-out alternate; 
+}
+.theme-menu__list {
+  display: flex;
+  flex-direction: column;
+  gap: 14px;
+  margin-block-end: 20px;
+ 
+
+}
+.theme-menu__item {
+  position: relative;
+  display: block;
+ padding-left: 18px;
+ font-size: 14px;
+}
+.main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.articles {
+  display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 50px;
+}
+
+.card {
+  width: clamp(23.4375rem, 16.2852rem + 30.5164vw, 43.75rem);
+   border: 2px solid var(--accent-color);
+}
+
+.card__title {
+  font-family: var(--font-family);
+  border-block-end: 2px solid var(--accent-color);
+  font-size: 18px;
+  font-variation-settings: 'wght' var(--font-weight-title);
+  padding: 3px 24px 3px 10px;
+  background-color: var(--bg-color);
+}
+
+.card__image {
+  position: relative;
+  overflow: hidden;
+  /* border-top: var(--border); */
+}
+  
+.card__label {
+   position: absolute; 
+  opacity: 50%;
+  z-index: 1;
+  font-family: var(--accent-font);
+  mix-blend-mode: hard-light;
+  top: 25px;
+  right: 25px;
+  font-size: 14px;
+  font-weight: var(--font-weight-text);
+  text-shadow:  0 0 1px var(--bg-color);
+}
+
+@supports (text-stroke: 1px var(--bg-color)) or
+(-webkit-text-stroke: 1px var(--bg-color)) {
+  .card__label {
+    text-stroke: 1px var(--bg-color);
+    -webkit-text-stroke: 1px var(--bg-color);
+    text-shadow: none;
+  }
+}
+.image {
+  display: block;
+  inline-size: 100%;
+ block-size: 100%;
+  object-fit: cover;
+  object-position: center;
+  aspect-ratio: 1 / 1;
+  /* border-top: 2px solid var(--accent-color); */
+}
+
+.card__text {
+ border-top: 2px solid var(--accent-color);
+  background-color: var(--bg-color);
+  padding-top: 25px;
+  padding-left: 25px;
+  padding-right: 25px;
+  padding-bottom: 22px;
+  font-weight: var(--font-weight-text);
+  font-variation-settings: 'wght' var(--font-weight-text);
+}
+
+.card__text-paragraph {
+  margin-bottom: 27px;
+  background-color: var(--bg-color);
+}
+.card__text-paragraph:last-child {
+  margin-bottom: 0;
+}
+
+.card__footer {
+  background-color: var(--bg-color);
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: flex-end;
+  padding-right: 25px;
+  padding-bottom: 25px;
+
+}
+.card__like-button {
+  border: var(--border);
+  background-color: transparent;
+  width: 130px;
+  height: 38px;
+
+  /* margin-right: 25px; */
+}
+.button__text {
+  /* padding: 12.5px 37px; */
+  font-family: var(--accent-font);
+  font-size: 14px;
+  text-align: center;
+  mix-blend-mode: difference;
+   color: var(--button-color);
+}
+.card__icon-button {
+  border: none;
+  background-color: transparent;
+  height: 38px;
+  padding: 0;
+  margin-right: 3px;
+  /* margin-block-start: 9px; */
+  transition: border 0.3s ease;
+  /* margin-right: 25px; */
+}
+.card__icon-button:focus {
+  outline: none;
+}
+.card__icon-button:focus-visible {
+  border: 2px solid var(--accent-color);
+}
+
+.card__like-button:focus {
+  outline: none;
+  box-shadow: 2px 2px 0 var(--accent-color);
+}
+
+.button {
+  position: relative;
+  z-index: 1;
+  background-color: var(--bg-color);
+  border: 2px solid var(--accent-color);
+ color: var(--button-color);
+  font-size: 14px;
+  line-height: 12.6px;
+  font-family: var(--accent-font);
+}
+
+.button__save {
+  margin-block-start: 50px;
+  margin-block-end: 103px;
+  display: flex;
+  gap: 8px;
+  align-items: center;
+  justify-content: center;
+  inline-size: 335px;
+  block-size: 55px;
+}
+
+.floppy {
+ mix-blend-mode: difference;
+ position: relative;
+color: var(--floppy-color);
+max-width: 21px;
+height: auto;
+}
+
+.button:focus {
+  outline: none;
+  box-shadow: 2px 2px 0 var(--accent-color);
+}
+
+.button::after {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  display: block;
+  width: 100%;
+  height: 100%;
+  background-color: var(--accent-color);
+  inset-inline-start: 0px;
+  inset-block-start: 0px;
+  transform-origin: left;
+  transform: scale(0);
+}
+
+.button:hover::after {
+  animation: color 0.5s ease-in-out;
+  transform: scale(1);
+}
+.button::before {
+  content: "";
+  position: absolute;
+  inline-size: 0;
+  block-size: 100%;
+  inset: 0;
+  display: block;
+  background-color: var(--accent-color);
+  transition: 0.5s ease-in-out;
+}
+
+.button:hover::before {
+  inline-size: 100%;
+}
+
+.like-icon {
+  cursor: pointer;
+  transform-origin: center;
+  
+}
+
+.popup {
+  inline-size: 353px;
+min-height: 191px;
+  border: 2px solid var(--accent-color);
+  padding: 30px;
+  color: var(--accent-color);
+  font-family: var(--accent-font);
+  font-size: 14px;
+  background-color: var(--bg-color);
+  font-weight: var(--font-weight-text);
+  line-height: 21px;
+  text-transform: uppercase;
+}
+
+ .floppy {
+  max-width: 21px;
+  height: auto;
+  color: var(--floppy-color);
+  mix-blend-mode: difference;
+} 
+
+.popup__floppy {
+  max-width: 39px;
+  height: auto;
+}
+
+.close-button {
+  inline-size: 293px;
+  block-size: 38px;
+  text-transform: uppercase;
+  color: var(--accent-color-color);
+   background-color: transparent; 
+  border: 2px solid var(--accent-color);
+}
+
+.popup__form {
+  grid-column: 1/-1;
+}
+.popup[open] {
+  display: grid;
+  grid-template-columns: min-content 1fr;
+  align-items: center;
+  gap: 30px 20px;
+}
+
+.popup[open]::backdrop {
+  background-color: rgba(0 0 0/ 0.75);
+}
+
+
+.filter {
+  filter: invert(1) brightness(1) saturate(80%);
+}
+
+.sepia {
+  filter: sepia(70%);
+}
+
+.saturate {
+  filter: saturate(155%);
+}
+
+.opacity {
+  filter: opacity(0.5);
+}
+
+.blur {
+  filter: blur(0.5rem);
+}
+
+.brightness {
+  filter: brightness(200%);
+}
+
+.grayscale {
+  filter: grayscale(0.8);
+}
+
+@media (width <= 375px) {
+
+  .header {
+    width: 100%;
+  }
+  .card {
+    width: 100vw;
+  }
+.floppy {
+  max-width: 28px;
+  height: auto;
+
+}
+  .button__save {
+    margin-block-start: 52px;
+    display: flex;
+    flex-direction: column;
+    inline-size: 306px;
+    block-size: 84px;
+  }
+
+  .card__text-paragraph{
+    margin-bottom: 24px;
+  }
+
+  .card__text {
+    padding-bottom: 19px;
+  }
+
+  .popup {
+   width: 100%;
+   padding: 30px 40px;
+  }
+
+  .close-button {
+    inline-size: 257px;
+  }
+}
+
