--- a/styles/themes.css
+++ b/styles/themes.css
@@ -4,3 +4,56 @@
 ✦ theme-light — класс светлой темы
 ✦ не забудьте описать стили для изменения темы через медизапрос пользовательских предпочтений
 */
+/* светлая тема */
+:root.theme-light {
+    --font-weight-text: 400;
+    --font-weight-title: 700;
+    /* --border: 2px solid black; */
+    --bg-color: rgba(255, 255, 255, 1);
+    --bg-image: 
+    repeating-linear-gradient(90deg, #d3d3d3 0px 2px, transparent 2px 4px),
+    repeating-linear-gradient(180deg, #d3d3d3 0px 2px, transparent 2px 4px),
+    linear-gradient(180deg, #e7e7e7 0%, #e7e7e7 0.01%, #1a1a1a 100%);
+    --accent-color:  rgba(0, 0, 0, 1);
+    --button-color:rgba(255, 255, 255, 1);
+    --floppy-color: rgba(255, 255, 255, 1);
+    --contour-color: rgba(0, 0, 0, 1);
+    --sparks-color: red;
+
+
+}
+/* /* темная тема * */
+
+:root.theme-dark {
+    --font-weight-text: 465;
+    --font-weight-title: 785;
+    /* --border: 2px solid rgba(0, 204, 20, 1); */
+    --bg-color:  rgba(0, 0, 0, 1);
+    --bg-image: 
+    repeating-linear-gradient(90deg, #000 0 2px, transparent 2px 4px),
+    repeating-linear-gradient(180deg, #000 0 2px, transparent 2px 4px),
+    linear-gradient(180deg,  #007f0c 0%, #004306 100%);
+    --accent-color: rgba(0, 204, 20, 1);
+    --button-color:  rgba(0, 204, 20, 1);
+    --floppy-color: rgba(0, 204, 20, 1);
+    --contour-color: rgba(0, 204, 20, 1);
+    --sparks-color: red;
+}
+
+@media (prefers-color-scheme: dark) {
+    :root  {
+        --font-weight-text:465;
+        --font-weight-title:785;
+        /* --border: 2px solid rgba(0, 204, 20, 1); */
+        --bg-color:  rgba(0, 0, 0, 1);
+        --bg-image: 
+        repeating-linear-gradient(90deg, #000 0 2px, transparent 2px 4px),
+        repeating-linear-gradient(180deg, #000 0 2px, transparent 2px 4px),
+        linear-gradient(180deg,  #007f0c 0%, #004306 100%);
+        --accent-color: rgba(0, 204, 20, 1);
+        --button-color:  rgba(0, 204, 20, 1);
+    --floppy-color: rgba(0, 204, 20, 1);
+    --contour-color: rgba(0, 204, 20, 1);
+    --sparks-color: red;
+    }
+}
