--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,1 +1,21 @@
 /* В этом файле будут храниться все значения переменных в исходном состоянии, а так же их изменения в зависимости от ширины устройства */
+/* шрифты */
+:root {
+    --font-family: 'Inter', sans-serif;
+    --font-weight-text: 400;
+    --font-weight-title: 700;
+    /* --border: 2px solid black; */
+    --accent-font: 'Press Start 2P';
+    --bg-color: rgba(255, 255, 255, 1);
+    --accent-color:  rgba(0, 0, 0, 1);
+    --bg-image: 
+    repeating-linear-gradient(90deg, #d3d3d3 0 2px, transparent 2px 4px),
+    repeating-linear-gradient(180deg, #d3d3d3 0 2px, transparent 2px 4px),
+    linear-gradient(180deg, #e7e7e7 0%, #e7e7e7 0.01%, #1a1a1a 100%);
+    --button-color:rgba(255, 255, 255, 1);
+    --floppy-color: rgba(255, 255, 255, 1);
+    --contour-color:  rgba(0, 0, 0, 1);
+    --sparks-color: red; 
+
+}
+
